@startuml Measuring

set separator . 
skinparam classSeparator "."
skinparam packageSeparator "."
top to bottom direction

' Define Enumerations
enum CaptureTargets {
    FREE
    SCRIPT
    PROCEDURE
    SPECTRUM_MEASURE
}

' Define Classes
class CaptureTarget {
    +<<abstract>> before_start_capture() : None
    +<<abstract>> run_to_capturing_task() : None
    +<<abstract>> after_end_capture() : None
    +COMPLETED_EVENT : String
}

class Capture {
    +START_CAPTURE_EVENT : String
    +END_CAPTURE_EVENT : String
    +is_capturing : bool
    +start_capture(capture_target : CaptureTarget) : None
    +end_capture() : None
    +on_update(status : Status) : None
    -_target : CaptureTarget
}

class DataProvider {
    -_max_size : int
    -_dataqueue : deque
    +data : pd.DataFrame
    +add_row(row : dict) : None
}

class Updater {
    -_running : asyncio.Event
    -_task : Optional[asyncio.Task]
    +start() : None
    +stop() : None
    +update() : None
}

class Plot {
    -_plot : matplotlib.axes.Axes
    -_fig : Figure
    +add_axis(axis_id : str, ylabel : str, **kwargs) : None
    +add_line(dataAttrName : str, axis_id : str, **kwargs) : None
    +toggle_line(dataAttrName : str, isVisible : bool) : None
    +update_plot() : None
    +update_data(data : pd.DataFrame) : None
}

enum ExperimentExecutionState {
    FILL_IN_METADATA
    CHOOSE_CAPTURE_TARGET
    READY
    CAPTURING
    FINISHED
}

class Measuring {
    + on_status_update(status : Status) : None
}

class MeasuringView {
    -_figure : Figure
    -_line_toggle_buttons : Dict[str, ttk.Checkbutton]
    -_line_visibilities : Dict[str, tk.BooleanVar]
    +update_plot() : None
    +get_line_visibility(attrName : str) : bool
    +add_line(attrName : str, line_label : str, toggle_command : Callable[[], None]) : None
}

class Plotting {
    -_figure : Figure
    -_view : PlottingView
    +create_toggle_line_callback(attrName : str) : Callable[[], None]
}

class PlottingView {
    -_figure_canvas : FigureCanvasTkAgg
    -_line_toggle_buttons : Dict[str, ttk.Checkbutton]
    -_line_visibilities : Dict[str, tk.BooleanVar]
    +update_plot() : None
    +get_line_visibility(attrName : str) : bool
    +add_line(attrName : str, line_label : str, toggle_command : Callable[[], None]) : None
}

class ExperimentForm {
    + get_metadata(): ExperimentMetaData
}

class ExperimentMetaData {
    
}

' Define Relationships
Capture --> DataProvider
Capture --> CaptureTarget
Capture ..> ExperimentMetaData

Measuring --> Capture
Measuring --> CaptureTarget
Measuring --> MeasuringView
Measuring --> Plotting
Measuring --> ExperimentExecutionState
Measuring --> ExperimentForm

ExperimentForm ..> ExperimentMetaData

DataProvider ..> Plotting : notifies
Plotting --> Plot
Plotting --> PlottingView

Updater --> SonicDevice
Updater ..> Capture : notifies

Plot --> Figure

@enduml